--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "long-distance-strider",
   "version": "1.0.0",
-  "description": "",
+  "description": "Helper utility for Steel City Striders' Long Distance Strider competition.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
