Website and race list page

--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "Helper utility for Steel City Striders' Long Distance Strider competition.",
   "main": "app.js",
   "scripts": {
+    "build-css": "stylus client/src/stylesheets/index.styl -o client/public/css",
+    "watch-css": "stylus client/src/stylesheets/index.styl -o client/public/css -w",
+    "clean": "rm -rf client/public/css && mkdir -p client/public/css",
+    "build": "npm run clean && npm run build-css",
+    "watch": "npm run clean && npm run watch-css & nodemon app -e js,jade",
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,10 +23,24 @@
   },
   "homepage": "https://github.com/matt-barton/long-distance-strider#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "connect-mongo": "^2.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "jade": "^1.11.0",
     "mongoose": "^4.13.9",
+    "passport": "^0.4.0",
+    "stylus": "^0.54.5",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "nodemon": "^1.14.11"
   }
 }
