--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^4.13.9",
+    "mongoose-unique-array": "^0.2.0",
     "passport": "^0.4.0",
     "pug": "^2.0.0-rc.4",
     "stylus": "^0.54.5",
