--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^4.13.9",
     "passport": "^0.4.0",
     "pug": "^2.0.0-rc.4",
+    "request": "^2.83.0",
     "stylus": "^0.54.5",
     "underscore": "^1.8.3"
   },
